--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    setps:
+    steps:
       - uses: actions/checkout@v3
       - uses: chartboost/ruff-action@v1
